2007-01-17  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lz11-V2.xml, opt/lz11-V2-CancelJob.xml,
	  opt/lz11-V2-InkSaving.xml, opt/lz11-V2-InkType.xml,
	  opt/lz11-V2-PageSize.xml, opt/lz11-V2-Resolution.xml,
	  opt/lz11-V2-SkewAdjustment.xml: Removed driver execution
	  information from "lz11-V2" driver entry as this information is
	  already included with the driver package.

	* driver/foo2oak.xml, opt/foo2hp-BitsPerPlane.xml,
	  opt/foo2hp-ColorMode.xml, opt/foo2hp-Duplex.xml,
	  opt/foo2hp-ICM.xml, opt/foo2hp-InputSlot.xml,
	  opt/foo2hp-MediaType.xml, opt/foo2hp-Quality.xml,
	  opt/foo2oak-BitsPerPlane.xml, opt/foo2oak-ColorMode.xml,
	  opt/foo2oak-ICM.xml, opt/foo2oak-InputSlot.xml,
	  opt/foo2oak-MediaType.xml, opt/foo2zjs-ColorMode.xml,
	  opt/foo2zjs-Copies.xml, opt/foo2zjs-Duplex.xml,
	  opt/foo2zjs-ICM.xml, opt/foo2zjs-InputSlot.xml,
	  opt/foo2zjs-Intent.xml, opt/foo2zjs-MediaType.xml,
	  opt/foo2zjs-Nup.xml, opt/foo2zjs-NupOrient.xml,
	  opt/foo2zjs-PageSize.xml, opt/foo2zjs-PrinterType.xml,
	  opt/foo2zjs-Quality.xml, opt/foo2zjs-Resolution.xml,
	  printer/Generic-OAKT_Printer.xml, driver/foo2lava.xml,
	  driver/foo2xqx.xml, printer/HP-LaserJet_M1005_MFP.xml,
	  printer/KonicaMinolta-magicolor_2490_MF.xml,
	  printer/KonicaMinolta-magicolor_2530_DL.xml, driver/foo2hp.xml,
	  driver/foo2zjs.xml, printer/HP-Color_LaserJet_1500.xml: Updated
	  data for the "foo2zjs" and "foo2hp" drivers, removed "foo2oak",
	  added "foo2lava" and "foo2xqx", removed all driver execution
	  data for generating PPDs as the drivers supply this data. Added
	  the newly supported printers HP LaserJet M1005 MFP, KONICA
	  MINOLTA magicolor 2490 MF and KONICA MINOLTA magicolor 2530 DL.
	
2007-01-16  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/pxl1010.xml, driver/pbmtozjs: Marked the drivers "pxl1010"
	  and "pbmtozjs" obsolete. Replacements are "hpijs" and "foo2zjs".

2007-01-07  Till Kamppeter <till.kamppeter@gmail.com>
