@@ -3,7 +3,7 @@
     <url>http://sourceforge.net/projects/kyo-fs1016mfp/</url>
     <execution>
         <filter />
-        <prototype>foo2kyo-wrapper %A</prototype>
+        <prototype></prototype>
     </execution>
     <comments> <en>
         This is a driver developed for the Kyocera Mita FS-1016MFP
@@ -13,6 +13,13 @@
         
         It is possible that this driver will also work for other
         Kyocera Mita printers, but the author cannot test this.
+
+        &lt;p&gt;
+
+        Foomatic data to generate the PPD files is included with the
+        driver, therefore we do not provide this data and PPDs here on
+        the OpenPrinting site,
+
     </en> </comments>
     <printers>
         <printer><id>printer/Kyocera-FS-1016MFP</id></printer>
