@@ -1,22 +1,0 @@
-<option type="int" id="opt/foo2kyo-Copies">
-    <!-- A multilingual <comments> block can appear here, too;
-       it should be treated as documentation for the user. -->
-    <arg_longname> <en>Copies</en> </arg_longname>
-    <arg_shortname> <en>Copies</en> </arg_shortname>
-    <arg_execution>
-        <arg_group>General</arg_group>
-	<arg_order>220</arg_order>
-	<arg_spot>A</arg_spot>
-	<arg_required />
-	<arg_substitution />
-	<arg_proto>-n%s </arg_proto>
-    </arg_execution>
-    <constraints>
-	<constraint sense="true">
-	<driver>foo2kyo</driver>
-	<arg_defval>1</arg_defval>
-	</constraint>
-    </constraints>
-    <arg_max>99</arg_max>
-    <arg_min>1</arg_min>
-</option>
