@@ -1,36 +1,0 @@
-<option type="enum" id="opt/foo2kyo-Eco">
-    <!-- A multilingual <comments> block can appear here, too;
-       it should be treated as documentation for the user. -->
-    <arg_longname> <en>Eco Mode</en> </arg_longname>
-    <arg_shortname> <en>economo</en> </arg_shortname>
-    <arg_execution>
-	    <arg_group>Miscellaneous</arg_group>
-		<arg_order>200</arg_order>
-		<arg_spot>A</arg_spot>
-		<arg_required />
-		<arg_substitution />
-		<arg_proto>%s </arg_proto>
-    </arg_execution>
-    <constraints>
-	<constraint sense="true">
-	<driver>foo2kyo</driver>
-	<arg_defval>ev/foo2kyo-Eco-off</arg_defval>
-	</constraint>
-    </constraints>
-    <enum_vals>
-	<enum_val id="ev/foo2kyo-Eco-off">
-	    <ev_longname> <en>Off</en> </ev_longname>
-		<!-- A multilingual <comments> block can appear here, too;
-		 it should be treated as documentation for the user. -->
-	    <ev_shortname> <en>Off</en> </ev_shortname>
-	    <ev_driverval></ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-Eco-on">
-	    <ev_longname> <en>On</en> </ev_longname>
-		<!-- A multilingual <comments> block can appear here, too;
-		 it should be treated as documentation for the user. -->
-	    <ev_shortname> <en>On</en> </ev_shortname>
-	    <ev_driverval>-e</ev_driverval>
-	</enum_val>
-    </enum_vals>
-</option>
