@@ -1,102 +1,0 @@
-<option type="enum" id="opt/foo2kyo-MediaType">
-    <!-- A multilingual <comments> block can appear here, too;
-       it should be treated as documentation for the user. -->
-    <arg_longname> <en>Media Type</en> </arg_longname>
-    <arg_shortname> <en>MediaType</en> </arg_shortname>
-    <arg_execution>
-	<arg_group>General</arg_group>
-	<arg_order>150</arg_order>
-	<arg_spot>A</arg_spot>
-	<arg_required />
-	<arg_substitution />
-	<arg_proto>-m%s </arg_proto>
-    </arg_execution>
-    <constraints>
-	<constraint sense="true">
-	<driver>foo2kyo</driver>
-	<arg_defval>ev/foo2kyo-MediaType-0</arg_defval>
-	</constraint>
-    </constraints>
-    <enum_vals>
-	<enum_val id="ev/foo2kyo-MediaType-0">
-	    <ev_longname> <en>Plain</en> </ev_longname>
-	    <ev_shortname> <en>Plain</en> </ev_shortname>
-	    <ev_driverval>0</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-1">
-	    <ev_longname> <en>Transparency</en> </ev_longname>
-	    <ev_shortname> <en>Transparency</en> </ev_shortname>
-	    <ev_driverval>1</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-2">
-	    <ev_longname> <en>Preprinted</en> </ev_longname>
-	    <ev_shortname> <en>Preprinted</en> </ev_shortname>
-	    <ev_driverval>2</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-3">
-	    <ev_longname> <en>Labels</en> </ev_longname>
-	    <ev_shortname> <en>Labels</en> </ev_shortname>
-	    <ev_driverval>3</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-4">
-	    <ev_longname> <en>Bond</en> </ev_longname>
-	    <ev_shortname> <en>Bond</en> </ev_shortname>
-	    <ev_driverval>4</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-5">
-	    <ev_longname> <en>Recycled</en> </ev_longname>
-	    <ev_shortname> <en>Recycled</en> </ev_shortname>
-	    <ev_driverval>5</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-6">
-	    <ev_longname> <en>Vellum</en> </ev_longname>
-	    <ev_shortname> <en>Vellum</en> </ev_shortname>
-	    <ev_driverval>6</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-7">
-	    <ev_longname> <en>Rough</en> </ev_longname>
-	    <ev_shortname> <en>Rough</en> </ev_shortname>
-	    <ev_driverval>7</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-8">
-	    <ev_longname> <en>Letterhead</en> </ev_longname>
-	    <ev_shortname> <en>Letterhead</en> </ev_shortname>
-	    <ev_driverval>8</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-9">
-	    <ev_longname> <en>Color</en> </ev_longname>
-	    <ev_shortname> <en>Color</en> </ev_shortname>
-	    <ev_driverval>9</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-10">
-	    <ev_longname> <en>Prepunched</en> </ev_longname>
-	    <ev_shortname> <en>Prepunched</en> </ev_shortname>
-	    <ev_driverval>10</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-11">
-	    <ev_longname> <en>Envelope</en> </ev_longname>
-	    <ev_shortname> <en>Envelope</en> </ev_shortname>
-	    <ev_driverval>11</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-12">
-	    <ev_longname> <en>Card Stock</en> </ev_longname>
-	    <ev_shortname> <en>cardStock</en> </ev_shortname>
-	    <ev_driverval>12</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-13">
-	    <ev_longname> <en>Thick Paper</en> </ev_longname>
-	    <ev_shortname> <en>thickPaper</en> </ev_shortname>
-	    <ev_driverval>13</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-14">
-	    <ev_longname> <en>High Quality</en> </ev_longname>
-	    <ev_shortname> <en>highQuality</en> </ev_shortname>
-	    <ev_driverval>14</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-MediaType-15">
-	    <ev_longname> <en>Custom Type</en> </ev_longname>
-	    <ev_shortname> <en>customType</en> </ev_shortname>
-	    <ev_driverval>15</ev_driverval>
-	</enum_val>
-    </enum_vals>
-</option>
