@@ -1,50 +1,0 @@
-<option type="enum" id="opt/foo2kyo-Nup">
-    <!-- A multilingual <comments> block can appear here, too;
-       it should be treated as documentation for the user. -->
-    <arg_longname> <en>N-up Printing</en> </arg_longname>
-    <arg_shortname> <en>Nup</en> </arg_shortname>
-    <arg_execution>
-        <arg_group>Miscellaneous</arg_group>
-	<arg_order>200</arg_order>
-	<arg_spot>A</arg_spot>
-	<arg_required />
-	<arg_substitution />
-	<arg_proto>%s </arg_proto>
-    </arg_execution>
-    <constraints>
-	<constraint sense="true">
-	<driver>foo2kyo</driver>
-	<arg_defval>ev/foo2kyo-Nup-1</arg_defval>
-	</constraint>
-    </constraints>
-    <enum_vals>
-	<enum_val id="ev/foo2kyo-Nup-1">
-	    <ev_longname> <en>1-up</en> </ev_longname>
-		<!-- A multilingual <comments> block can appear here, too;
-		 it should be treated as documentation for the user. -->
-	    <ev_shortname> <en>1up</en> </ev_shortname>
-	    <ev_driverval></ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-Nup-2">
-	    <ev_longname> <en>2-up</en> </ev_longname>
-		<!-- A multilingual <comments> block can appear here, too;
-		 it should be treated as documentation for the user. -->
-	    <ev_shortname> <en>2up</en> </ev_shortname>
-	    <ev_driverval>-2</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-Nup-4">
-	    <ev_longname> <en>4-up</en> </ev_longname>
-		<!-- A multilingual <comments> block can appear here, too;
-		 it should be treated as documentation for the user. -->
-	    <ev_shortname> <en>4up</en> </ev_shortname>
-	    <ev_driverval>-4</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-Nup-9">
-	    <ev_longname> <en>9-up</en> </ev_longname>
-		<!-- A multilingual <comments> block can appear here, too;
-		 it should be treated as documentation for the user. -->
-	    <ev_shortname> <en>9up</en> </ev_shortname>
-	    <ev_driverval>-9</ev_driverval>
-	</enum_val>
-    </enum_vals>
-</option>
