@@ -1,115 +1,0 @@
-<option type="enum" id="opt/foo2kyo-PageSize">
-    <arg_longname> <en>Page Size</en> </arg_longname>
-    <arg_shortname> <en>PageSize</en> </arg_shortname>
-    <arg_execution>
-	<arg_group>General</arg_group>
-	<arg_order>135</arg_order>
-	<arg_spot>A</arg_spot>
-	<arg_required />
-	<arg_substitution />
-	<arg_proto>-p%s </arg_proto>
-    </arg_execution>
-    <constraints>
-	<constraint sense="true">
-	<driver>foo2kyo</driver>
-	<arg_defval>ev/foo2kyo-PageSize-0</arg_defval>
-	</constraint>
-    </constraints>
-    <enum_vals>
-	<enum_val id="ev/foo2kyo-PageSize-0">
-	    <ev_longname> <en>A4</en> </ev_longname>
-	    <ev_shortname> <en>A4</en> </ev_shortname>
-	    <ev_driverval>0</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-1">
-	    <ev_longname> <en>Letter</en> </ev_longname>
-	    <ev_shortname> <en>Letter</en> </ev_shortname>
-	    <ev_driverval>1</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-2">
-	    <ev_longname> <en>Legal</en> </ev_longname>
-	    <ev_shortname> <en>Legal</en> </ev_shortname>
-	    <ev_driverval>2</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-3">
-	    <ev_longname> <en>A5</en> </ev_longname>
-	    <ev_shortname> <en>A5</en> </ev_shortname>
-	    <ev_driverval>3</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-4">
-	    <ev_longname> <en>B5 (JIS)</en> </ev_longname>
-	    <ev_shortname> <en>jisB5</en> </ev_shortname>
-	    <ev_driverval>4</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-5">
-	    <ev_longname> <en>oficioII</en> </ev_longname>
-	    <ev_shortname> <en>oficioII(8.5x13)</en> </ev_shortname>
-	    <ev_driverval>5</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-6">
-	    <ev_longname> <en>Executive</en> </ev_longname>
-	    <ev_shortname> <en>Executive</en> </ev_shortname>
-	    <ev_driverval>6</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-7">
-	    <ev_longname> <en>Statement</en> </ev_longname>
-	    <ev_shortname> <en>Statement</en> </ev_shortname>
-	    <ev_driverval>7</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-8">
-	    <ev_longname> <en>Folio</en> </ev_longname>
-	    <ev_shortname> <en>Folio</en> </ev_shortname>
-	    <ev_driverval>8</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-9">
-	    <ev_longname> <en>B6 (JIS)</en> </ev_longname>
-	    <ev_shortname> <en>jisB6</en> </ev_shortname>
-	    <ev_driverval>9</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-10">
-	    <ev_longname> <en>A6</en> </ev_longname>
-	    <ev_shortname> <en>A6</en> </ev_shortname>
-	    <ev_driverval>10</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-11">
-	    <ev_longname> <en>B5 (ISO)</en> </ev_longname>
-	    <ev_shortname> <en>isoB5</en> </ev_shortname>
-	    <ev_driverval>11</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-12">
-	    <ev_longname> <en>Envelope C5</en> </ev_longname>
-	    <ev_shortname> <en>EnvC5</en> </ev_shortname>
-	    <ev_driverval>12</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-13">
-	    <ev_longname> <en>Envelope #10</en> </ev_longname>
-	    <ev_shortname> <en>Env#10</en> </ev_shortname>
-	    <ev_driverval>13</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-14">
-	    <ev_longname> <en>Envelope CL</en> </ev_longname>
-	    <ev_shortname> <en>EnvCL(4.33x8.66)</en> </ev_shortname>
-	    <ev_driverval>14</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-15">
-	    <ev_longname> <en>Envelope #9</en> </ev_longname>
-	    <ev_shortname> <en>Env#9(3.88x8.88)</en> </ev_shortname>
-	    <ev_driverval>15</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-16">
-	    <ev_longname> <en>Envelope Monarch</en> </ev_longname>
-	    <ev_shortname> <en>EnvMonarch</en> </ev_shortname>
-	    <ev_driverval>16</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-17">
-	    <ev_longname> <en>Envelope #6</en> </ev_longname>
-	    <ev_shortname> <en>Env#6(3.63x6.5)</en> </ev_shortname>
-	    <ev_driverval>17</ev_driverval>
-	</enum_val>
-	<enum_val id="ev/foo2kyo-PageSize-18">
-	    <ev_longname> <en>16K</en> </ev_longname>
-	    <ev_shortname> <en>16K(7.56x10.75)</en> </ev_shortname>
-	    <ev_driverval>18</ev_driverval>
-	</enum_val>
-    </enum_vals>
-</option>
