@@ -1,5 +1,12 @@
 2007-01-17  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* driver/foo2kyo.xml, opt/foo2kyo-Brightness.xml,
+	  opt/foo2kyo-Copies.xml, opt/foo2kyo-Eco.xml,
+	  opt/foo2kyo-MediaType.xml, opt/foo2kyo-Nup.xml,
+	  opt/foo2kyo-NupOrient.xml, opt/foo2kyo-PageSize.xml: Removed
+	  driver execution information from "foo2kyo" driver entry as this
+	  information is already included with the driver package.
+
 	* driver/lz11-V2.xml, opt/lz11-V2-CancelJob.xml,
 	  opt/lz11-V2-InkSaving.xml, opt/lz11-V2-InkType.xml,
 	  opt/lz11-V2-PageSize.xml, opt/lz11-V2-Resolution.xml,
